k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory-service
  ports:
    - port: 80
      targetPort: 8080
